# RustDupe

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  CRepositoryRustDupeprogress.txt  LICENSE  README.md  SECURITY.md  build.rs  clippy.toml  rust-toolchain.toml  rustdupe.manifest  rustdupe.rc  rustfmt.toml
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: benchmark.yml  ci.yml  release.yml
benches/: scan_benchmark.rs  scan_benchmarks.rs
benchmarks/: data.js
src/: cli.rs  config.rs  error.rs  lib.rs  logging.rs  main.rs  progress.rs  signal.rs
src/actions/: delete.rs  mod.rs  preview.rs
src/cache/: database.rs  entry.rs  mod.rs
src/duplicates/: finder.rs  groups.rs  mod.rs
src/output/: csv.rs  html.rs  json.rs  mod.rs  script.rs
src/scanner/: document.rs  hardlink.rs  hasher.rs  mod.rs  path_utils.rs  perceptual.rs  walker.rs
src/session/: data.rs  io.rs  mod.rs
src/tui/: app.rs  events.rs  keybindings.rs  mod.rs  run.rs  theme.rs  ui.rs
templates/: report.html
tests/: bloom_filter_tests.rs  bloom_performance_tests.rs  config_tests.rs  document_tests.rs  edge_cases.rs  error_handling_tests.rs  error_tests.rs  integration_tests.rs  keybinding_tests.rs  mmap_hashing_tests.rs  perceptual_pipeline_tests.rs  perceptual_tests.rs  property_tests.rs  reference_tests.rs  script_tests.rs  tui_navigation_tests.rs  tui_tests.rs
tests/integration/: cache_corruption_tests.rs  cache_tests.rs  config_tests.rs  document_tests.rs  error_continuation_tests.rs  export_tests.rs  link_tests.rs  mod.rs  multi_directory_tests.rs  override_tests.rs  path_edge_cases.rs  profile_tests.rs  reference_tests.rs  scan_tests.rs  session_corruption_tests.rs  session_tests.rs
